# velus

./: .gitignore  .gitmodules  Makefile  configure  includes  variables.mk  velus.opam
.github/workflows/: build.yml  velus.yml
extraction/: Extraction.v
src/: ClightToAsm.v  Clocks.v  CoindStreams.v  Environment.v  Ident.v  Operators.v  VelusCorrectness.v  VelusMemory.v  veluscommon.ml  veluslib.ml  velusmain.ml
src/Common/: Common.v  CommonList.v  CompCertLib.v
src/CoreExpr/: CEClocking.v  CEClockingSemantics.v  CEInterpreter.v  CEIsFree.v  CEProperties.v  CESemantics.v  CESyntax.v  CETyping.v  coreexprlib.ml
src/Lustre/Parser/: LustreLexer.mll  LustreParser.vy  Makefile  Relexer.ml
src/NLustre/: IsDefined.v  IsFree.v  IsVariable.v  Memories.v  NLClocking.v  NLCoindSemantics.v  NLCoindToIndexed.v  NLElaboration.v  NLIndexedSemantics.v  NLIndexedToCoind.v  NLMemSemantics.v  nlustrelib.ml
src/NLustreToStc/: NL2StcTyping.v  Translation.v
src/Obc/: Equiv.v  Fusion.v  ObcAddDefaults.v  ObcInvariants.v  ObcSemantics.v  ObcSyntax.v  ObcTyping.v  obclib.ml
src/ObcToClight/: Correctness.v  Generation.v  GenerationProperties.v  Interface.v  MoreSeparation.v  SepInvariant.v  interfacelib.ml
src/Stc/: StcClocking.v  StcIsFree.v  StcSchedule.v  StcTyping.v  StcWellDefined.v  stclib.ml
src/StcToObc/: Correctness.v  Stc2ObcInvariants.v  Stc2ObcTyping.v  Translation.v
tests/: runtests.sh
tools/: automake.mll
